--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aperture</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -32,6 +32,27 @@
             <h4>Photographer & Filmmaker</h4>
             <h1>Aperture Studios</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+    </section>
+    <section class="what_we_do">
+        <div class="container">
+            <h2>What we do.</h2>
+            <h3>The areas that we're specialized in.</h3>
+
+            <div class="d_flex_container">
+                <article>
+                    <div class="description">
+                        <h4>Product Photography</h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <img src="images/ww1.jpg" alt="img1">
+                </article>
+                <article>
+                    <img src="images/ww2.jpg" alt="img2">
+                </article>
+            </div>
+
         </div>
     </section>
     <section class="past_clients">
