--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
                     <img src="images/ww1.jpg" alt="img1">
                 </article>
                 <article>
+                    <div class="description">
+                        <h4>Product Photography</h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <img src="images/ww2.jpg" alt="img2">
+                </article>
+                <article>
+                    <div class="description">
+                        <h4>Product Photography</h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <img src="images/ww1.jpg" alt="img1">
+                </article>
+                <article>
+                    <div class="description">
+                        <h4>Product Photography</h4>
+                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <a href="#">Read more</a>
+                    </div>
                     <img src="images/ww2.jpg" alt="img2">
                 </article>
             </div>
