--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </header>
 
 <main>
+
     <section class="main_banner">
         <div class="container">
             <h4>Photographer & Filmmaker</h4>
@@ -34,11 +35,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
     </section>
+
     <section class="what_we_do">
         <div class="container">
             <h2>What we do.</h2>
             <h3>The areas that we're specialized in.</h3>
-
             <div class="d_flex_container">
                 <article>
                     <div class="description">
@@ -58,24 +59,38 @@
                 </article>
                 <article>
                     <div class="description">
-                        <h4>Product Photography</h4>
-                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <h4>Drone Photography</h4>
+                        <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/ww1.jpg" alt="img1">
+                    <img src="images/ww3.jpg" alt="img3">
                 </article>
                 <article>
                     <div class="description">
-                        <h4>Product Photography</h4>
-                        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                        <h4>Wildlife Photography</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/ww2.jpg" alt="img2">
+                    <img src="images/ww4.jpg" alt="img4">
                 </article>
             </div>
-
         </div>
     </section>
+
+    <section class="photo_section sunset_at_mount_fuji">
+        <div class="photo_text">
+            <h3>Sunset at Mount Fuji</h3>
+            <p>Duis tristique sed lorem a vestibulum. Cras<br>commodo consequat orci, in convallis<br>risus egestas non.</p>
+        </div>
+    </section>
+
+    <section class="photo_section monstera_leafs">
+        <div>
+            <h3>Monstera Leafs</h3>
+            <p>Vestibulum sit amet urna turpis. Mauris<br>euismod elit et nisi ultrices, ut faucibus<br>orci tincidunt.</p>
+        </div>
+    </section>
+
     <section class="past_clients">
         <div class="container">
             <h4>Past clients</h4>
@@ -89,6 +104,14 @@
             </div>
         </div>
     </section>
+
+    <section class="photo_section star_fall_in_the_himalayas">
+        <div>
+            <h3>Star fall in the Himalayas</h3>
+            <p>Nulla rhoncus feugiat eros quis<br>consectetur. Morbi neque ex,<br>condimentum dapibus congue et,<br>vulputate ut ligula.</p>
+        </div>
+    </section>
+
     <section class="help">
         <div class="container">
             <h4>Need help with photography or videography?</h4>
@@ -96,6 +119,61 @@
             <a href="#">Get in touch</a>
         </div>
     </section>
+
 </main>
+
+<footer>
+    <div class="footer_box">
+
+        <div class="footer_first">
+            <div class="first_col">
+                <a href="#"><img src="images/logo.svg" alt="product_logo"></a>
+                <p>Photographers & videographers capturing the world around us.</p>
+            </div>
+            <div class="second_col">
+                <ul>
+                    <li><a href="#">Business areas</a></li>
+                    <li><a href="#">Product Photography</a></li>
+                    <li><a href="#">Architecture Photography</a></li>
+                    <li><a href="#">Drone Photography</a></li>
+                    <li><a href="#">Wildlife Photography</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Gear cage</a></li>
+                    <li><a href="#">Featured images</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Style guide</a></li>
+                    <li><a href="#">Instructions</a></li>
+                    <li><a href="#">Changelog</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer_second">
+            <div>
+                <h4>Subscribe to our newsletter</h4>
+                <h5>Read about all the things we do.</h5>
+            </div>
+            <form action="#" method="post">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+                <small>Email is required for subscription</small>
+                <button type="submit"></button>
+            </form>
+        </div>
+
+        <div class="footer_third">
+            <p>© Aperture Photography, Inc. All rights reserved. Licensing.</p>
+            <ul>
+                <li><a href="#"><img src="images/twitter.svg" alt="twitter_logo"></a></li>
+                <li><a href="#"><img src="images/instagram.svg" alt="instagram_logo"></a></li>
+                <li><a href="#"><img src="images/facebook.svg" alt="facebook_logo"></a></li>
+            </ul>
+        </div>
+
+    </div>
+</footer>
+
 </body>
 </html>
