--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <h1>Aperture Studios</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
+        <ul class="position_items">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>Iceland</li>
+        </ul>
     </section>
 
     <section class="what_we_do">
@@ -82,6 +88,24 @@
             <h3>Sunset at Mount Fuji</h3>
             <p>Duis tristique sed lorem a vestibulum. Cras<br>commodo consequat orci, in convallis<br>risus egestas non.</p>
         </div>
+        <ul class="position_items">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>Iceland</li>
+        </ul>
+    </section>
+
+    <section class="the_gear_cage">
+        <div class="tools_container">
+            <div class="information">
+                <h4>The Gear cage</h4>
+                <h3>The tools that we use.</h3>
+                <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
+                <a href="#">Check it out</a>
+            </div>
+        </div>
+        <div class="banner_we_use"></div>
     </section>
 
     <section class="photo_section monstera_leafs">
@@ -89,6 +113,12 @@
             <h3>Monstera Leafs</h3>
             <p>Vestibulum sit amet urna turpis. Mauris<br>euismod elit et nisi ultrices, ut faucibus<br>orci tincidunt.</p>
         </div>
+        <ul class="position_items">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>Iceland</li>
+        </ul>
     </section>
 
     <section class="past_clients">
@@ -110,6 +140,12 @@
             <h3>Star fall in the Himalayas</h3>
             <p>Nulla rhoncus feugiat eros quis<br>consectetur. Morbi neque ex,<br>condimentum dapibus congue et,<br>vulputate ut ligula.</p>
         </div>
+        <ul class="position_items">
+            <li>1/2000s</li>
+            <li>f/11</li>
+            <li>100</li>
+            <li>Iceland</li>
+        </ul>
     </section>
 
     <section class="help">
