--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Aperture</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 
 <header>
     <div class="container">
-        <a href="#"><img src="images/logo.svg" alt="product_logo"></a>
+        <a href="#"><img src="images/logo.svg" alt="product_logo" class="logo"></a>
         <nav>
             <ul>
                 <li><a href="#">Business areas</a></li>
                 <li><a href="#">Featured images</a></li>
                 <li><a href="#">Gear cage</a></li>
                 <li><a href="#">Contact</a></li>
+                <li class="menu_bar"><a href="#"><img src="images/bars.svg" alt="menu"></a></li>
                 <li><a href="#">Get template</a></li>
             </ul>
         </nav>
@@ -211,5 +213,6 @@
     </div>
 </footer>
 
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 </body>
 </html>
