ls.13.jan.carousel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aperture</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -127,7 +129,12 @@
         <div class="container">
             <h4>Past clients</h4>
             <h5>Trusted by your favourite companies</h5>
-            <div class="clients_logos">
+            <div class="clients_logos owl-carousel">
+                <a href="#"><img src="images/logo_hill_hayes.svg" alt="past_client_logo"></a>
+                <a href="#"><img src="images/logo_riksgarsen.svg" alt="past_client_logo"></a>
+                <a href="#"><img src="images/logo_studio_cai.svg" alt="past_client_logo"></a>
+                <a href="#"><img src="images/logo_chill_industries.svg" alt="past_client_logo"></a>
+                <a href="#"><img src="images/logo_stockholm.svg" alt="past_client_logo"></a>
                 <a href="#"><img src="images/logo_hill_hayes.svg" alt="past_client_logo"></a>
                 <a href="#"><img src="images/logo_riksgarsen.svg" alt="past_client_logo"></a>
                 <a href="#"><img src="images/logo_studio_cai.svg" alt="past_client_logo"></a>
@@ -213,6 +220,9 @@
     </div>
 </footer>
 
+<script src="https://kit.fontawesome.com/a2651c069f.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
