--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://resources/demos/style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+
+<div id="dialog" title="Get template">
+    <p>Hello dear teacher Artem, I'm glad to inform you, that lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, officia.</p>
+</div>
 
 <header>
     <div class="container">
@@ -24,7 +30,7 @@
                 <li><a href="#">Gear cage</a></li>
                 <li><a href="#">Contact</a></li>
                 <li class="menu_bar"><a href="#"><img src="images/bars.svg" alt="menu"></a></li>
-                <li><a href="#">Get template</a></li>
+                <li><a href="#"  id="opener">Get template</a></li>
             </ul>
         </nav>
     </div>
@@ -222,6 +228,7 @@
 
 <script src="https://kit.fontawesome.com/a2651c069f.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/scripts.js"></script>
 </body>
